@@ -1283,6 +1283,7 @@ END
 
 CDLOGGER DIALOGEX 0, 0, 322, 213
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_MINIMIZEBOX | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
+EXSTYLE WS_EX_ACCEPTFILES
 CAPTION "Code Data Logger"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
